einige Layout Bugs gefixt

--- a/src/styling/rechner.css
+++ b/src/styling/rechner.css
@@ -14,9 +14,8 @@
   border-radius: 15px;
   background-color: #fff;
   min-width: 285px;
-  max-width: 400px; /*sollte max-width:300px sein?*/
+  max-width: 400px;
   height: 825px;
-  width: 30%;
   margin-right: 30px;
   margin-left: 50px;
 }
@@ -35,49 +34,13 @@
 
 /*Dropdown Datensätze*/
 .dropdown-daten {
+  float: right;
+  width: 150px;
+  padding-bottom: 10px;
+  padding-right: 20px;
   padding-top: 25px;
-  margin-left: 10px;
   position: relative;
-  user-select: none;
-}
-
-.dropdown-daten-button {
-  padding: 10px;
-  float: inline-end;
-  height: 35px;
-  width: 140px;
-  margin-right: 10px;
-  display: flex;
-  left: 0;
-  align-items: center;
-  cursor: pointer;
-  border: solid #f3f3f3;
-  border-width: 2px;
-}
-
-/*nicht optimal gelöst*/
-.dropdown-daten-content {
-  position: absolute;
-  margin-top: 35px;
-  margin-left: 125px;
-  background-color: #fff;
-  width: 140px;
-  padding: 15px;
-  z-index: 1;
-  top: 110%;
-  box-shadow: 3px 3px 10px 6px rgb(0, 0, 0, 0.05);
-  font-weight: 500;
-  color: #999;
-}
-
-.dropdown-daten-item {
-  cursor: pointer;
-  padding: 10px;
-  transition: all 0.2s;
-}
-
-.dropdown-daten-item:hover {
-  background-color: #f3f3f3;
+  margin-left: 10px;
 }
 
 .eingabeItem {
@@ -173,9 +136,9 @@ input {
 .kennzahlenBox {
   border-radius: 15px;
   background-color: #fff;
-  height: 825px; /*calc(100vh - 110px);*/
   display: table;
-  width: 60%;
+  width: 50%;
+  height: 825px;
 }
 
 .kennzahlenBox h3 {
@@ -185,9 +148,9 @@ input {
 
 .kennzahlen {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  width: 60%;
+  grid-template-columns: 250px 250px 250px;
+  grid-template-rows: 180px 180px 180px 180px;
+  height: 750px;
 }
 
 .kennzahl {
