--- a/src/styling/simulation.css
+++ b/src/styling/simulation.css
@@ -1,3 +1,13 @@
+.simulation-mainpage {
+  overflow-y: scroll;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 60px auto;
+  grid-row-gap: 10px;
+  width: 100vw;
+  position: fixed;
+}
+
 .navigationBar {
   margin-top: 10px;
 }
@@ -34,12 +44,9 @@
 /*-------*/
 
 .rowSimulation {
-  position: fixed;
-  height: 100%;
-  margin-top: 55px;
-  display: grid;
-  grid-template-rows: 250px 700px;
   overflow-y: scroll;
+  display: grid;
+  grid-template-rows: 250px 20px 250px 800px;
 }
 
 /*Eingaben Überblick*/
@@ -73,12 +80,13 @@
   border-radius: 15px;
   background-color: #f3f3f3;
   height: 110px;
-  width: 300px;
+  max-width: 400px;
+  min-width: 300px;
 }
 
 .cardNameSimulation {
-  padding-top: 8%;
-  padding-left: 8%;
+  padding-top: 20px;
+  padding-left: 25px;
   font-size: 18;
   font-weight: bold;
 }
@@ -86,7 +94,8 @@
 .underLine {
   height: 3px;
   width: 30px;
-  margin-left: 12%;
+  margin-left: 35px;
+  margin-top: 3px;
   background-color: #9b9b9b;
 }
 
@@ -97,6 +106,14 @@
   margin-top: 3%;
   margin-right: 20%;
   font-size: x-large;
+}
+
+.divider {
+  width: auto;
+  height: 2px;
+  background-color: #d7d1d1d5;
+  margin-left: 20px;
+  margin-top: 15px;
 }
 
 /*-------*/
@@ -117,8 +134,7 @@
 .containerLeft {
   background-color: #ffffff;
   border-radius: 30px;
-  height: 825px;
-  box-shadow: 3px 2px 4px rgba(0, 0, 0, 0.1);
+  height: 600px;
   display: grid;
   grid-template-rows: 8% 90%;
 }
@@ -156,13 +172,15 @@
 
 /*Kennzahlenbox*/
 
+/*
 .kennzahlen {
   border-radius: 15px;
   background-color: #fff;
-  height: 825px; /*calc(100vh - 110px);*/
+  height: 825px; 
 }
 
 .kennzahlen h3 {
   margin-left: 25px;
   margin-top: 30px;
 }
+*/
